[package]
name = "indexer-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
indexer-query = { path = "../query" }
indexer-allocation = { path = "../allocation" }
indexer-attestation = { path = "../attestation" }
indexer-watcher = { path = "../watcher" }
thiserror.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true
thegraph-core.workspace = true
axum.workspace = true
graphql_client.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
bip39.workspace = true

[dev-dependencies]
env_logger.workspace = true
rstest.workspace = true
test-assets = { path = "../test-assets" }
test-log.workspace = true
test-with.workspace = true
wiremock.workspace = true
