[package]
name = "indexer-service-rs"
version = "1.3.2"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexer-monitor = { path = "../monitor" }
indexer-attestation = { path = "../attestation" }
indexer-allocation = { path = "../allocation" }
indexer-config = { path = "../config" }
indexer-dips = { path = "../dips" }
indexer-query = { path = "../query" }
anyhow = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
axum.workspace = true
bigdecimal.workspace = true
sqlx.workspace = true
thegraph-core.workspace = true
thegraph-graphql-http.workspace = true
graphql_client.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
clap = { workspace = true, features = ["derive"] }
build-info.workspace = true
lazy_static.workspace = true
async-trait.workspace = true
async-graphql = { version = "7.0.11", default-features = false }
async-graphql-axum = "7.0.11"
base64.workspace = true
graphql = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-v0.3.0" }
tap_core.workspace = true
uuid.workspace = true
alloy.workspace = true
tower_governor = "0.4.3"
governor = "0.6.0"
tower-http = { version = "0.6.2", features = [
  "auth",
  "cors",
  "normalize-path",
  "trace",
] }
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
axum-extra = { version = "0.9.3", features = [
  "typed-header",
], default-features = false }
tokio-util = "0.7.10"
cost-model = { git = "https://github.com/graphprotocol/agora", rev = "3ed34ca" }
bip39.workspace = true
tower = "0.5.1"
pin-project = "1.1.7"
typed-builder = "0.20.0"

[dev-dependencies]
hex-literal = "0.4.1"
test-assets = { path = "../test-assets" }
rstest.workspace = true
tower-test = "0.4.0"
tower-service = "0.3.3"
tokio-test = "0.4.4"

[build-dependencies]
build-info-build = { version = "0.0.39", default-features = false }
