[package]
name = "indexer-tap-agent"
version = "1.7.4"
edition = "2021"
publish = false

[[bin]]
name = "indexer-tap-agent"
path = "src/main.rs"

[features]
test = ["dep:test-assets"]

[dependencies]
indexer-monitor = { path = "../monitor" }
indexer-watcher = { path = "../watcher" }
indexer-allocation = { path = "../allocation" }
indexer-config = { path = "../config" }
indexer-query = { path = "../query" }
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
eventuals.workspace = true
tracing.workspace = true
prometheus.workspace = true
axum.workspace = true
tap_core.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
lazy_static.workspace = true
thegraph-core.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true 
bigdecimal = { workspace = true, features = ["serde"] }
graphql_client.workspace = true

ruint = { version = "1.12.3", features = [
    "num-traits",
], default-features = false }
futures-util = { version = "0.3.28", default-features = false }
jsonrpsee = { version = "0.24.0", features = ["http-client", "tracing"] }
ractor = { version = "0.14", features = [
    "async-trait",
], default-features = false }
tap_aggregator.workspace = true
futures = { version = "0.3.30", default-features = false }
bon = "3.3"
test-assets = { path = "../test-assets" , optional=true}

[dev-dependencies]
tempfile = "3.8.0"
wiremock.workspace = true
wiremock-grpc = "0.0.3-alpha3"
test-assets = { path = "../test-assets" }
test-log = { version = "0.2.12", default-features = false }
bon = "3.3"
rstest = "0.24.0"
indexer-tap-agent = { path = ".", features = ["test"] }
