[package]
name = "indexer-tap-agent"
version = "1.9.1"
edition = "2021"
publish = false

[[bin]]
name = "indexer-tap-agent"
path = "src/main.rs"

[features]
test = ["dep:test-assets", "dep:rand"]

[dependencies]
indexer-monitor = { path = "../monitor" }
indexer-watcher = { path = "../watcher" }
indexer-allocation = { path = "../allocation" }
indexer-config = { path = "../config" }
indexer-query = { path = "../query" }
indexer-receipt = { path = "../indexer-receipt" }
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
eventuals.workspace = true
tracing.workspace = true
prometheus.workspace = true
axum.workspace = true
tap_core.workspace = true
tap_graph.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
lazy_static.workspace = true
thegraph-core.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
bigdecimal = { workspace = true, features = ["serde"] }
graphql_client.workspace = true
ruint = { version = "1.12.3", features = [
    "num-traits",
], default-features = false }
futures-util = { version = "0.3.28", default-features = false }
jsonrpsee = { version = "0.24.0", features = ["http-client", "tracing"] }
ractor = { version = "0.14", features = [
    "async-trait",
], default-features = false }
tap_aggregator.workspace = true
futures = { version = "0.3.30", default-features = false }
bon.workspace = true
test-assets = { path = "../test-assets", optional = true }
rand = { version = "0.8", optional = true }
itertools = "0.14.0"

[dev-dependencies]
# Release-please breaks with cyclical dependencies if dev-dependencies
# import the current crate. For testing we import the current crate with the `test`
# feature enabled in order to enable test-only infrastructure within our app when running tests.
my-crate = { package = "indexer-tap-agent", path = ".", features = ["test"] }
tempfile = "3.8.0"
wiremock.workspace = true
wiremock-grpc = "0.0.3-alpha3"
test-assets = { path = "../test-assets" }
test-log.workspace = true
rstest = "0.24.0"
