[package]
name = "indexer-tap-agent"
version = "2.0.0"
edition = "2021"
publish = false

[[bin]]
name = "indexer-tap-agent"
path = "src/main.rs"

[features]
default = []
test = ["dep:test-assets", "dep:rand"]
profiling = ["profiler"]

[dependencies]
indexer-monitor = { path = "../monitor" }
indexer-watcher = { path = "../watcher" }
indexer-allocation = { path = "../allocation" }
indexer-config = { path = "../config" }
indexer-query = { path = "../query" }
indexer-receipt = { path = "../indexer-receipt" }
profiler = { path = "../profiler", optional = true }
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
prometheus.workspace = true
axum.workspace = true
tap_core.workspace = true
tap_graph.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
thegraph-core.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
bigdecimal = { workspace = true, features = ["serde"] }
graphql_client.workspace = true
ruint.workspace = true
futures-util.workspace = true
jsonrpsee.workspace = true
ractor.workspace = true
tap_aggregator.workspace = true
futures.workspace = true
bon.workspace = true
test-assets = { path = "../test-assets", optional = true }
rand = { workspace = true, optional = true }
itertools.workspace = true
educe.workspace = true


[dev-dependencies]
# Release-please breaks with cyclical dependencies if dev-dependencies
# import the current crate. For testing we import the current crate with the `test`
# feature enabled in order to enable test-only infrastructure within our app when running tests.
my-crate = { package = "indexer-tap-agent", path = ".", features = ["test"] }
tempfile.workspace = true
serial_test.workspace = true
wiremock.workspace = true
wiremock-grpc.workspace = true
test-assets = { path = "../test-assets" }
test-log = { workspace = true, features = ["trace"] }
rstest.workspace = true
stdext.workspace = true
insta.workspace = true
tokio = { workspace = true, features = ["test-util"] }
