[package]
name = "test-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
indexer-allocation = { path = "../allocation" }
bip39 = "2.0.0"
tap_core.workspace = true
tap_graph.workspace = true
thegraph-core.workspace = true
bon.workspace = true
sqlx.workspace = true
tokio.workspace = true
rstest = "0.24.0"
stdext = "0.3.3"
